do i18n for enrollcodelistview (fi/en)

--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -169,5 +169,31 @@
   "qRCodeView.navbarTitle": "Invite Code <em>{{inviteCode}}</em>",
   "qRCodeView.copyInviteLink": "Copy invite link",
   "qRCodeView.linkCopied": "Link copied!",
-  "qRCodeView.instructions": "1. <strong>Show</strong> this QR code to your user.<br/>2. Alternatively, press the <i>Copy invite link</i> button above, and paste the link to the user you want enroll for example, via instant messaging or email.<br/>3. Via the QR code or the link, your user can log in and get to set their <strong>callsign</strong>. <br/>4. After that, they are in the Waiting Room.<br/>5. <strong>Approve</strong> your user by one of the three ways.<br/><small><br/>You may approve your user either by taking the <strong>approval code</strong> from their Waiting Room screen, <strong>OR</strong> asking them to provide you the approval code as a link, <strong>OR</strong> by asking them their apporval code & using that it in the <strong>\"Approve Users\"</strong> view.</small>"
+  "qRCodeView.instructions": "1. <strong>Show</strong> this QR code to your user.<br/>2. Alternatively, press the <i>Copy invite link</i> button above, and paste & send the link to the user you want enroll.<br/>3. Via the QR code or the link, your user can log in and get to set their <strong>callsign</strong>. <br/>4. After that, they are in the Waiting Room.<br/>5. <strong>Approve</strong> your user by one of the three ways.<br/><small><br/>You may approve your user either by taking the <strong>approval code</strong> from their Waiting Room screen, <strong>OR</strong> asking them to provide you the approval code as a link, <strong>OR</strong> by asking them their apporval code & using that it in the <strong>\"Approve Users\"</strong> view.</small>",
+
+  "ENROLLCODELISTVIEW": "ENROLLCODELISTVIEW",
+  "enrollCodeListView.createNewCode.title": "Create New Invite Code",
+  "enrollCodeListView.createNewCode.description": "Invite codes can be used multiple times. Create a new code only if you need one - for example, if you have deleted or deactivated the previous one.",
+  "enrollCodeListView.createNewCode.confirmButton": "Create Code",
+  "enrollCodeListView.navbarTitle": "Add Users",
+  "enrollCodeListView.serviceInfoCardTitle": "Add Users with Invite Code",
+  "enrollCodelistView.serviceInfoCardDetails": "Open the created invite code in QR code view by <strong>pressing</strong> the code or create a new invite code. The invite code works until it is deleted or temporarily deactivated.",
+  "enrollCodeListView.codeListTitle": "Active Invite Codes",
+  "enrollCodeListView.howToDescription1": "<strong>Create</strong> a new invite code by pressing the button or use an active one previously created.",
+  "enrollCodeListView.howToDescription2": "<strong>Open</strong> the invite code in QR code view by <strong>pressing</strong> the code. <strong>Show the code</strong> to your users.",
+  "enrollCodeListView.howToDescription3": "From the QR code link, the user can log in and enter their <strong>callsign</strong>.",
+  "enrollCodeListView.howToDescription4": "After this, your user awaits <strong>approval</strong>. You will see them in the list waiting for your approval.",
+  "enrollCodeListView.createNewCode.createButton": "Create New Invite",
+  "enrollCodeListView.codes.inputField": "Filter Invite Codes",
+  "enrollCodeListView.codes.codeIsActive": "Active",
+  "enrollCodeListView.codes.codeIsDeactivated": "Deactivated",
+  "enrollCodeListView.codes.deleteModalTitle": "You are about to delete an invite code",
+  "enrollCodeListView.codes.deleteModelDescription": "Deleting the code will permanently disable its use. However, users who have already logged in with this code will not lose their access to the service.",
+  "enrollCodeListView.codes.deleteModalConfimButton": "Delete Code",
+  "enrollCodeListView.codes.deactivateModalTitle": "You are about to deactivate an invite code",
+  "enrollCodeListView.codes.deactivateModalDescription": "Deactivating the code will disable its use while the code is deactivated. However, users who have already logged in with this code will not lose their access to the service. <br /> <br /> A person attempting to log in with the code will receive an error message 'Code incorrect.'",
+  "enrollCodeListView.codes.deactivateModalConfimButton": "Deactivate Code",
+  "enrollCodeListView.codes.activateModalTitle": "You are about to reactivate an invite code",
+  "enrollCodeListView.codes.activateModalDescription": "Do you want to reactivate the invite code? Once the code is activated, it can be used again to log in as a user awaiting approval.",
+  "enrollCodeListView.codes.activateModalConfimButton": "Activate Code"
 }
