--- a/src/assets/locale/fi.json
+++ b/src/assets/locale/fi.json
@@ -167,5 +167,32 @@
   "qRCodeView.navbarTitle": "Kutsukoodi <em>{{inviteCode}}</em>",
   "qRCodeView.copyInviteLink": "Kopioi kutsulinkki",
   "qRCodeView.linkCopied": "Linkki kopioitu!",
-  "qRCodeView.instructions": "1. <strong>Näytä</strong> käyttäjällesi tätä QR-koodia - <strong>TAI</strong> paina yltä <i>Kopioi kutsulinkki</i>, ja lähetä linkki käyttäjällesi esim. pikaviestillä.<br/>2. Käyttäjäsi pääsee QR:sta tai linkistä syöttämään <strong>peitenimensä</strong>.<br/>3. <strong>Hyväksy</strong> käyttäjäsi kirjautuminen.<br/><small><br/>Käyttäjän kirjautuminen hyväksytään kuvaamalla tämän näytöltä QR-koodi, tai hyväksymällä se<br/>käyttäjienhallinnan <strong>“Hyväksy\"</strong>-näkymässä.</small>"
+  "qRCodeView.instructions": "1. <strong>Näytä</strong> käyttäjällesi tätä QR-koodia - <strong>TAI</strong> paina yltä <i>Kopioi kutsulinkki</i>, ja lähetä linkki käyttäjällesi esim. pikaviestillä.<br/>2. Käyttäjäsi pääsee QR:sta tai linkistä syöttämään <strong>peitenimensä</strong>.<br/>3. <strong>Hyväksy</strong> käyttäjäsi kirjautuminen.<br/><small><br/>Käyttäjän kirjautuminen hyväksytään kuvaamalla tämän näytöltä QR-koodi, tai hyväksymällä se<br/>käyttäjienhallinnan <strong>“Hyväksy\"</strong>-näkymässä.</small>",
+
+  "ENROLLCODELISTVIEW": "ENROLLCODELISTVIEW",
+  "enrollCodeListView.createNewCode.title": "Luo uusi kutsukoodi",
+  "enrollCodeListView.createNewCode.description": "Kutsukoodit toimivat monta kertaa. Luo uusi koodi vain, jos tarvitset - esimerkiksi, jos olet poistanut tai deaktivoinut edellisen.",
+  "enrollCodeListView.createNewCode.confirmButton": "Luo koodi",
+  "enrollCodeListView.navbarTitle": "Lisää käyttäjiä",
+  "enrollCodeListView.serviceInfoCardTitle": "Lisää käyttäjiä kutsukoodilla",
+  "enrollCodelistView.serviceInfoCardDetails": "Avaa luotu kutsukoodi QR-koodinäkymään <strong>painamalla</strong> koodia tai luo uusi kutsukoodi. Kutsukoodi toimii, kunnes se poistetaan tai deaktivoidaan tilapäisesti.",
+  "enrollCodeListView.codeListTitle": "Käytössä olevat kutsukoodit",
+  "enrollCodeListView.howToDescription1": "<strong>Luo</strong> uusi kutsukoodi painamalla nappia tai käytä aktiivista aiemmin luotua.",
+  "enrollCodeListView.howToDescription2": "<strong>Avaa</strong> kutsukoodi QR-koodinäkymään <strong>painamalla</strong> koodia. <strong>Näytä koodia</strong> käyttäjillesi.",
+  "enrollCodeListView.howToDescription3": "QR-koodilinkistä käyttäjä pääsee kirjautumaan ja syöttämään peitenimensä.",
+  "enrollCodeListView.howToDescription4": "Tämän jälkeen käyttäjäsi odottaa <strong>hyväksyntää</strong>. Näet hänet hyväksyntääsi odottavien listassa.",
+  "enrollCodeListView.createNewCode.createButton": "Luo uusi Kutsu",
+  "enrollCodeListView.codes.inputField": "Suodata kutsukoodeja",
+  "enrollCodeListView.codes.codeIsActive": "Aktiivinen",
+  "enrollCodeListView.codes.codeIsDeactivated": "Deaktivoitu",
+  "enrollCodeListView.codes.deleteModalTitle": "Olet poistamassa kutsukoodia",
+  "enrollCodeListView.codes.deleteModelDescription": "Koodin poistaminen estää sen käytön lopullisesti. Käyttäjät, jotka ovat jo kirjautuneet tällä koodilla, eivät kuitenkaan menetä pääsyään palveluun.",
+  "enrollCodeListView.codes.deleteModalConfimButton": "Poista koodi",
+  "enrollCodeListView.codes.deactivateModalTitle": "Olet deaktivoimassa kutsukoodia",
+  "enrollCodeListView.codes.deactivateModalDescription": "Koodin deaktivointi estää sen käytön, kun koodi on deaktivoituna. Käyttäjät, jotka ovat jo kirjautuneet tällä koodilla, eivät kuitenkaan menetä pääsyään palveluun. <br /> <br /> Koodilla kirjautumista yrittävä henkilö saa virheilmoitukseksi 'Koodi väärin.",
+  "enrollCodeListView.codes.deactivateModalConfimButton": "Deaktivoi koodi",
+  "enrollCodeListView.codes.activateModalTitle": "Olet aktivoimassa kutsukoodia",
+  "enrollCodeListView.codes.activateModalDescription": "Haluatko aktivoida kutsukoodin uudelleen? Kun koodi on aktivoitu, voi sillä jälleen kirjautua palveluun hyväksyntää odottavaksi käyttäjäksi.",
+  "enrollCodeListView.codes.activateModalConfimButton": "Aktivoi koodi",
+  "enrollCodeListView.codes.showQRCodeButton": "Näytä QR-koodi"
 }
