do i18n for EnrollApprovalView (fi/en)

--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -145,7 +145,7 @@
   "USERMANAGEMENTVIEW": "USERMANAGEMENTVIEW",
   "userManagement.rejectionSuccessMessage": "Success: The user has been removed.",
   "userManagement.rejectionFailedMessage": "Failure -",
-  "userManagement.serviceInfoCard.details": "List and manage users. <strong>Admins</strong> are able to add new users. <strong>Fighters</strong> are basic users who have access to your services.",
+  "userManagement.serviceInfoCard.details": "Manage users in this view. <strong>Admins</strong> are users that are able to access these user management tools. <strong>Fighters</strong> are basic users, who have access to your services.",
   "userManagement.howItWorks.whatPromote": "Promoting: <strong>Promote</strong> or <strong>demote</strong> users. Promoted users gain the same rights as you currently have, as an admin.",
   "userManagement.howItWorks.whatRemove": "Removing: Removing users will <strong>revoke</strong> their access to Rasenmaeher, and <strong>all</strong> connected services. For example, a removed user will no longer be able to connect to your situation awareness service that is managed by Rasenmaeher.",
   "userManagement.mainDialogTitle": "Manage User",
@@ -188,12 +188,39 @@
   "enrollCodeListView.codes.codeIsActive": "Active",
   "enrollCodeListView.codes.codeIsDeactivated": "Deactivated",
   "enrollCodeListView.codes.deleteModalTitle": "You are about to delete an invite code",
-  "enrollCodeListView.codes.deleteModelDescription": "Deleting the code will permanently disable its use. However, users who have already logged in with this code will not lose their access to the service.",
+  "enrollCodeListView.codes.deleteModalDescription": "Deleting the code will permanently disable its use. However, users who have already logged in with this code will not lose their access to the service.",
   "enrollCodeListView.codes.deleteModalConfimButton": "Delete Code",
   "enrollCodeListView.codes.deactivateModalTitle": "You are about to deactivate an invite code",
   "enrollCodeListView.codes.deactivateModalDescription": "Deactivating the code will disable its use while the code is deactivated. However, users who have already logged in with this code will not lose their access to the service. <br /> <br /> A person attempting to log in with the code will receive an error message 'Code incorrect.'",
   "enrollCodeListView.codes.deactivateModalConfimButton": "Deactivate Code",
   "enrollCodeListView.codes.activateModalTitle": "You are about to reactivate an invite code",
   "enrollCodeListView.codes.activateModalDescription": "Do you want to reactivate the invite code? Once the code is activated, it can be used again to log in as a user awaiting approval.",
-  "enrollCodeListView.codes.activateModalConfimButton": "Activate Code"
+  "enrollCodeListView.codes.activateModalConfimButton": "Activate Code",
+  "enrollCodeListView.codes.showQRCodeButton": "Show the QR Code",
+
+  "ENROLLAPPROVALVIEW": "ENROLLAPPROVALVIEW",
+  "enrollApprovalView.approvalSuccessMessage": "User approved.",
+  "enrollApprovalView.approvalFailedMessage": "User approval failed:",
+  "enrollApprovalView.rejectionSuccessMessage": "User rejection succeeded.",
+  "enrollApprovalView.rejectionFailedMessage": "Rejection failed:",
+  "enrollApprovalView.acceptButton": "Approve",
+  "enrollApprovalView.rejectButton": "Reject",
+  "enrollApprovalView.confirmRejectButton": "Confirm Rejection",
+  "enrollApprovalView.loadingComponentAccepting": "Approving user...",
+  "enrollApprovalView.acceptModal.InputCode": "Enter the user's approval code and press Approve.",
+  "enrollApprovalView.acceptModal.callsign": " <strong>Callsign:</strong>",
+  "enrollApprovalView.acceptModal.code": "<strong>Approval Code:</strong>",
+  "enrollApprovalView.acceptModal.approved": "User has been approved.",
+  "enrollApprovalView.acceptModal.rejectDescription": "Are you sure you want to reject the user?",
+  "enrollApprovalView.navbarTitle": "Approve Users",
+  "enrollApprovalView.howToDescription1": "Users awaiting approval are displayed here.",
+  "enrollApprovalView.howToDescription2": "Users who have used the QR invite code (or entered the invite code in the service's login view) are in <em>the Waiting Room</em>, awaiting an admin's approval.",
+  "enrollApprovalView.howToDescription3": "<strong>Approval Method 1:</strong> <br /> Open your camera and scan the QR code from the user's screen. On that page, approve the user.",
+  "enrollApprovalView.howToDescription4": "<strong>Approval Method 2:</strong> <br /> You can approve the user in this view by pressing their callsign. After this, you need to enter the approval code from the user's screen.",
+  "enrollApprovalView.acceptedModal.dialogTitle": "User Approved",
+  "enrollApprovalView.rejectModal.dialogTitle": "Reject User",
+  "enrollApprovalView.rejectedModal.dialogTitle": "User Rejected",
+  "enrollApprovalView.acceptModal.dialogTitle": "Approve User",
+  "enrollApprovalView.list.waitingUsers": "<small>Waiting Users</small>",
+  "enrollApprovalView.list.noWaitingUsers": "No users awaiting approval."
 }
