--- a/src/assets/locale/fi.json
+++ b/src/assets/locale/fi.json
@@ -186,7 +186,7 @@
   "enrollCodeListView.codes.codeIsActive": "Aktiivinen",
   "enrollCodeListView.codes.codeIsDeactivated": "Deaktivoitu",
   "enrollCodeListView.codes.deleteModalTitle": "Olet poistamassa kutsukoodia",
-  "enrollCodeListView.codes.deleteModelDescription": "Koodin poistaminen estää sen käytön lopullisesti. Käyttäjät, jotka ovat jo kirjautuneet tällä koodilla, eivät kuitenkaan menetä pääsyään palveluun.",
+  "enrollCodeListView.codes.deleteModalDescription": "Koodin poistaminen estää sen käytön lopullisesti. Käyttäjät, jotka ovat jo kirjautuneet tällä koodilla, eivät kuitenkaan menetä pääsyään palveluun.",
   "enrollCodeListView.codes.deleteModalConfimButton": "Poista koodi",
   "enrollCodeListView.codes.deactivateModalTitle": "Olet deaktivoimassa kutsukoodia",
   "enrollCodeListView.codes.deactivateModalDescription": "Koodin deaktivointi estää sen käytön, kun koodi on deaktivoituna. Käyttäjät, jotka ovat jo kirjautuneet tällä koodilla, eivät kuitenkaan menetä pääsyään palveluun. <br /> <br /> Koodilla kirjautumista yrittävä henkilö saa virheilmoitukseksi 'Koodi väärin.",
@@ -194,5 +194,31 @@
   "enrollCodeListView.codes.activateModalTitle": "Olet aktivoimassa kutsukoodia",
   "enrollCodeListView.codes.activateModalDescription": "Haluatko aktivoida kutsukoodin uudelleen? Kun koodi on aktivoitu, voi sillä jälleen kirjautua palveluun hyväksyntää odottavaksi käyttäjäksi.",
   "enrollCodeListView.codes.activateModalConfimButton": "Aktivoi koodi",
-  "enrollCodeListView.codes.showQRCodeButton": "Näytä QR-koodi"
+  "enrollCodeListView.codes.showQRCodeButton": "Näytä QR-koodi",
+
+  "ENROLLAPPROVALVIEW": "ENROLLAPPROVALVIEW",
+  "enrollApprovalView.approvalSuccessMessage": "Käyttäjä hyväksytty.",
+  "enrollApprovalView.approvalFailedMessage": "Käyttäjän hyväksyminen epäonnistui:",
+  "enrollApprovalView.rejectionSuccessMessage": "Käyttäjän hylkääminen onnistui.",
+  "enrollApprovalView.rejectionFailedMessage": "Hylkääminen epäonnistui:",
+  "enrollApprovalView.acceptButton": "Hyväksy",
+  "enrollApprovalView.rejectButton": "Hylkää",
+  "enrollApprovalView.confirmRejectButton": "Vahvista hylkäys",
+  "enrollApprovalView.loadingComponentAccepting": "Hyväksytään käyttäjää...",
+  "enrollApprovalView.acceptModal.InputCode": "Syötä käyttäjän hyväksyntäkoodi ja paina Hyväksy",
+  "enrollApprovalView.acceptModal.callsign": " <strong>Peitenimi:</strong>",
+  "enrollApprovalView.acceptModal.code": "<strong>Hyväksyntäkoodi:</strong>",
+  "enrollApprovalView.acceptModal.approved": "Käyttäjä on hyväksytty.",
+  "enrollApprovalView.acceptModal.rejectDescription": "Oletko varma, että haluat hylätä käyttäjän?",
+  "enrollApprovalView.navbarTitle": "Hyväksy käyttäjiä",
+  "enrollApprovalView.howToDescription1": "Hyväksyntää odottavat käyttäjät näkyvät tässä näkymässä.",
+  "enrollApprovalView.howToDescription2": "QR-kutsukoodia käyttänyt (tai kutsukoodin palvelun login-näkymään syöttänyt) käyttäjä on <em>odottaa hyväksyntää-tilassa</em>.",
+  "enrollApprovalView.howToDescription3": "<strong>Hyväksyntätapa 1:</strong> <br /> Avaa kamera ja skannaa taistelijan näytöltä QR-koodi. Aukeavalla sivulla hyväksyt taistelijan.",
+  "enrollApprovalView.howToDescription4": "<strong>Hyväksyntätapa 2:</strong> <br /> Voit hyväksyä käyttäjän tässä näkymässä painamalla tämän peitenimeä. Tämän jälkeen sinun on syötettävä hyväksyntäkoodi käyttäjän näytöltä.",
+  "enrollApprovalView.acceptedModal.dialogTitle": "Käyttäjä hyväksytty",
+  "enrollApprovalView.rejectModal.dialogTitle": "Hylkää käyttäjä",
+  "enrollApprovalView.rejectedModal.dialogTitle": "Käyttäjä hylätty",
+  "enrollApprovalView.acceptdModal.dialogTitle": "Hyväksy käyttäjä",
+  "enrollApprovalView.list.waitingUsers": "small>Odottavat käyttäjät</small>",
+  "enrollApprovalView.list.noWaitingUsers": "Ei hyväksyntää odottavia käyttäjiä."
 }
