--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -5,6 +5,7 @@
   "link-copied": "Link copied!",
   "copy-link": "Copy approval link for your administrator",
   "go-back": "Go back",
+  "close": "Close",
 
   "FOOTERS": "FOOTERS",
   "footer.loading": "Loading...",
@@ -222,5 +223,22 @@
   "enrollApprovalView.rejectedModal.dialogTitle": "User Rejected",
   "enrollApprovalView.acceptModal.dialogTitle": "Approve User",
   "enrollApprovalView.list.waitingUsers": "<small>Waiting Users</small>",
-  "enrollApprovalView.list.noWaitingUsers": "No users awaiting approval."
+  "enrollApprovalView.list.noWaitingUsers": "No users awaiting approval.",
+
+  "SERVICETAK": "SERVICETAK",
+  "serviceTak.grabZip.grabbedModalTitle": "Client package downloaded.",
+  "serviceTak.grabZip.grabbedModalDescription": "The Client package has been downloaded. Load the client package to TAK according to the Quickstart Guide. <br /> <br /> <em>Package name:</em>",
+  "serviceTak.grabZip.grabbingGenericError": "Generic error: downloading the client package failed. Please try again later.",
+  "serviceTak.grabZip.grabbingErrorTitle": "Error",
+  "serviceTak.grabZip.grabbingErrorDescription": "Downloading the client package failed. Please try again later. <br /> <br /> <em>Error message from the application:</em>",
+  "serviceTak.foldableCardTitle": "TAK",
+  "serviceTak.serviceInfoCardTitle": "TAK Situational Awareness Application",
+  "serviceTak.unfoldableCardTitle": "How to get started",
+  "serviceTak.step1Description": "<strong>Quickstart Guide</strong> tells you how to start using TAK on your device.",
+  "serviceTak.step2Description": "The <strong>Usage Guide</strong> tells you how to use the application, according to our standard model.",
+  "serviceTak.step3Description": "Download the <strong>Client Package</strong> and install it to your TAK device according to the Quickstart Guide, to get using the app.",
+  "serviceTak.guideButton.quickStart": "Quickstart Guide",
+  "serviceTak.guideButton.usage": "Usage Guide",
+  "serviceTak.grabZipButton": "Download your Client Package",
+  "serviceTak.grabZipButton.loading": "Loading..."
 }
